--- a/MoveVehicle/MoveVehicle/MoveVehicle.csproj
+++ b/MoveVehicle/MoveVehicle/MoveVehicle.csproj
@@ -37,6 +37,9 @@
     <Reference Include="FivePD.net, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FivePD.net.1.3.0\lib\net452\FivePD.net.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
