--- a/MoveVehicle/MoveVehicle/packages.config
+++ b/MoveVehicle/MoveVehicle/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CitizenFX.Core.Client" version="1.0.3324" targetFramework="net472" />
   <package id="FivePD.net" version="1.3.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
 </packages>
